--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "tailwindcss": "^3.3.2"
   }
 }
