--- a/view/package.json
+++ b/view/package.json
@@ -2,7 +2,6 @@
   "name": "view",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -35,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
+    "file-loader": "^6.2.0",
+    "tailwindcss": "^3.3.2"
   }
 }
