--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -16,7 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.10.0",
-    "puppeteer-core": "^20.1.2"
+    "puppeteer": "^20.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
